BUG FIX: NO RESULTS message won’t continue to appear after a bad search followed by a good one.

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
           <select class="control-field filter-field form-control">
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
-              <option value="L-SERIES">L-SERIES</option>
               <option value="GENERIC INFO">GENERIC INFO</option>
               <option value="CROSSTREK">CROSSTREK</option>
+              <option value="L-SERIES">L-SERIES</option>
               <option value="EJ22">EJ22</option>
               <option value="FORESTER">FORESTER</option>
           </select>
@@ -85,38 +85,12 @@
       <div class="grid">
         <!-- Tiles! -->
 
-          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
-                <div class="card-title">Haynes Weber Carburator Manual</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/cvgrease.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="Advice for Longer CV Joints Life">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/advice-for-longer-cv-joints-life.html"> <div class="item-content">
                 <div class="card-title">Advice for Longer CV Joints Life</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Swing Away Bumper">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
-                <div class="card-title">DIY: Swing Away Bumper</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -150,13 +124,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-category="Generic Info" data-description="Subaru research and information website" data-title="Cars101.com">
+          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
 
               <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/cars101-com.html"> <div class="item-content">
-                <div class="card-title">Cars101.com</div>
-                <div class="card-description">Subaru research and information website</div>
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
+                <div class="card-title">Haynes Weber Carburator Manual</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -170,6 +144,32 @@
                 <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
                 <div class="card-title">Tube Bending 101</div>
                 <div class="card-description">pirate4x4 tech</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Swing Away Bumper">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
+                <div class="card-title">DIY: Swing Away Bumper</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-category="Generic Info" data-description="Subaru research and information website" data-title="Cars101.com">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/cars101-com.html"> <div class="item-content">
+                <div class="card-title">Cars101.com</div>
+                <div class="card-description">Subaru research and information website</div>
                 </a>
                 </div>
               </div>
@@ -202,6 +202,19 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/ejIntake.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Intake">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-intake.html"> <div class="item-content">
+                <div class="card-title">DIY: Intake</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-category="L-series" data-description="numbchux swap guide" data-title="EA82 to Ej22 Swap Guide">
 
               <div class="card">
@@ -228,19 +241,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/ej22radiator/9eaToEjRadiator-min.jpg');" class="item h2 w4" data-category="L-series" data-description="EJ22 Swap" data-title="Fitting an EJ22 Radiator in an L-series">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/fitting-an-ej22-radiator-in-an-l-series.html"> <div class="item-content">
-                <div class="card-title">Fitting an EJ22 Radiator in an L-series</div>
-                <div class="card-description">EJ22 Swap</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-category="L-series" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
@@ -254,13 +254,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/ejIntake.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Intake">
+          <div style="background-image: url('/static/img/guides/ej22radiator/9eaToEjRadiator-min.jpg');" class="item h2 w4" data-category="L-series" data-description="EJ22 Swap" data-title="Fitting an EJ22 Radiator in an L-series">
 
               <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-intake.html"> <div class="item-content">
-                <div class="card-title">DIY: Intake</div>
-                <div class="card-description"></div>
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/fitting-an-ej22-radiator-in-an-l-series.html"> <div class="item-content">
+                <div class="card-title">Fitting an EJ22 Radiator in an L-series</div>
+                <div class="card-description">EJ22 Swap</div>
                 </a>
                 </div>
               </div>
@@ -286,6 +286,32 @@
                 <!--<div class="card-id">ej22</div> -->
                 <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
                 <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
+
+              <div class="card">
+                <!--<div class="card-id">Forester</div> -->
+                <a href="./detail-page/2nd-gen-forester-snorkle.html"> <div class="item-content">
+                <div class="card-title">2nd Gen Forester Snorkle</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/SFForesterSumpGuard.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="Forester Skid Plate BluePrint">
+
+              <div class="card">
+                <!--<div class="card-id">Forester</div> -->
+                <a href="./detail-page/forester-skid-plate-blueprint.html"> <div class="item-content">
+                <div class="card-title">Forester Skid Plate BluePrint</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -319,32 +345,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/SFForesterSumpGuard.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="Forester Skid Plate BluePrint">
-
-              <div class="card">
-                <!--<div class="card-id">Forester</div> -->
-                <a href="./detail-page/forester-skid-plate-blueprint.html"> <div class="item-content">
-                <div class="card-title">Forester Skid Plate BluePrint</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
-
-              <div class="card">
-                <!--<div class="card-id">Forester</div> -->
-                <a href="./detail-page/2nd-gen-forester-snorkle.html"> <div class="item-content">
-                <div class="card-title">2nd Gen Forester Snorkle</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-category="L-series" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
 
               <div class="card">
@@ -365,6 +365,19 @@
                 <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
                 <div class="card-title">Hitachi Carb Rebuild</div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/hitachiGuide.png');" class="item h2 w4" data-category="L-series" data-description="Carburetor Theory, Operation &amp; Servicing" data-title="Hitachi Training Manual, 1979">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/hitachi-training-manual-1979.html"> <div class="item-content">
+                <div class="card-title">Hitachi Training Manual, 1979</div>
+                <div class="card-description">Carburetor Theory, Operation &amp; Servicing</div>
                 </a>
                 </div>
               </div>
@@ -397,25 +410,25 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachiGuide.png');" class="item h2 w4" data-category="L-series" data-description="Carburetor Theory, Operation &amp; Servicing" data-title="Hitachi Training Manual, 1979">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/hitachi-training-manual-1979.html"> <div class="item-content">
-                <div class="card-title">Hitachi Training Manual, 1979</div>
-                <div class="card-description">Carburetor Theory, Operation &amp; Servicing</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/L-seriesWorkshopManual.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="L-series Workshop Manual">
 
               <div class="card">
                 <!--<div class="card-id">L-series</div> -->
                 <a href="./detail-page/l-series-workshop-manual.html"> <div class="item-content">
                 <div class="card-title">L-series Workshop Manual</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Welded Differential">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
+                <div class="card-title">DIY: Welded Differential</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -449,12 +462,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Welded Differential">
+          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
-                <div class="card-title">DIY: Welded Differential</div>
+                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
+                <div class="card-title">1985-96 Engine Torque Specs</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -488,19 +501,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
-                <div class="card-title">1985-96 Engine Torque Specs</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
       </div>
       <div id="noResults"></div>
     </section>
@@ -515,7 +515,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.14.18-21.06</p>
+      <p >v1-09.16.18-33.35</p>
     </a>
   </footer>
 
@@ -523,7 +523,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="/scripts/script-min.js"></script>
+  <script src="/scripts/script.js"></script>
   <script src="/scripts/accordion-min.js"></script>
 
 </body>
