--- a/detail-page/rebuild-your-weber-dgav-carb.html
+++ b/detail-page/rebuild-your-weber-dgav-carb.html
@@ -25,10 +25,10 @@
   <meta name="description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  1985-96 Engine Torque Specs " />
-  <meta property="og:description" content="   " />
+  <meta property="og:title" content="  Rebuild Your Weber DGAV Carb " />
+  <meta property="og:description" content="  Overhauling a 32/36 DGAV is the perfect way to get all the benefits of a brand-new unit at a fraction of the cost.  " />
 
-    <meta property="og:image" content="/static/img/guides/torque.jpg" />
+    <meta property="og:image" content="/static/img/guides/classic-ford-weber-dgv-rebuild-instructions-min.png" />
 
 
 </head>
@@ -57,29 +57,15 @@
 
 
     <section class="details">
-        <h1 class="details-headline">1985-96 Engine Torque Specs</h1>
-         <p class="details-author">by   
-          Brian Bradburn
-          
-
-          </p>
-          <a href="http://torquespecs.tripod.com/su85-96.htm" class="btn grey-background">Link</a>
+        <h1 class="details-headline">Rebuild Your Weber DGAV Carb</h1>
+        
+          <a href="https://www.classicfordmag.co.uk/" class="btn grey-background">Link</a>
+          <a href="/static/archive/classic-ford-weber-dgv-rebuild-instructions.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img  src="/static/img/guides/torque.jpg">
-            <p> The original source for this (http://torquespecs.tripod.com/su85-96.htm), as of 8/2018 is akin to malware. The ads bring me back to the early 2000s in all of the worst ways, just use the PDFs I made and save yourself the aggravation. Some images were missing when I archived the pages.</p>
-            <section class="list">
-            <table id="listView">
-            <tr> <th>Engine</th> <th>Archive</th> </tr>
-            <tr> <td>1.2L Engine</td><td> <a href="/static/archive/torque-spec/1.2LEngine.pdf" class="btn grey-background">PDF</a></td></tr>
-            <tr> <td>1.6L Engines</td><td> <a href="/static/archive/torque-spec/1.6LEngines.pdf" class="btn grey-background">PDF</a></td></tr>
-            <tr> <td>1.8L (1820cc) Engine</td><td> <a href="/static/archive/torque-spec/1.8L (1820cc) Engine.pdf" class="btn grey-background">PDF</a></td></tr>
-            <tr> <td>1.8L(1781cc) Engine</td><td> <a href="/static/archive/torque-spec/1.8L(1781cc)Engine.pdf" class="btn grey-background">PDF</a></td></tr>
-            <tr> <td>2.2L Engine</td><td> <a href="/static/archive/torque-spec/2.2LEngine.pdf" class="btn grey-background">PDF</a></td></tr>
-            <tr> <td>85-93 3.3L Engine</td><td> <a href="/static/archive/torque-spec/85-933.3LEngine.pdf" class="btn grey-background">PDF</a></td></tr>
-            <tr> <td>85-96 2.5L Engine</td><td> <a href="/static/archive/torque-spec/85-96 2.5L Engine.pdf" class="btn grey-background">PDF</a></td></tr>
-            <tr> <td>85-96 2.7L Engine</td><td> <a href="/static/archive/torque-spec/85-962.7LEngine.pdf" class="btn grey-background">PDF</a></td></tr>
-            </table> </section>
+            <img  src="/static/img/guides/classic-ford-weber-dgv-rebuild-instructions-min.png">
+            <p><em>Submitted to Lifted Subarus by Will Clarkson</em>, originally published in Classic Ford Magazine.</p>
+            <p>The Weber 32/36 DGV and DGAV carburettors were fitted to a whole host of classic Fords (<em>and subarus</em>), andmany have since been retrospectively fitted as a useful performance upgrade. The carbs are easy to set-up and maintain, however like most things in life they do benefit from some tlc from time to time – either a service or a full rebuild. Fortunately, service kits and replacement parts such as jets, diaphragms and valves are all still readily available from the likes of Webcon direct and Weber dealers.</p>
         </div>
     </section>
 
