--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
               <option value="GENERIC INFO">GENERIC INFO</option>
               <option value="CROSSTREK">CROSSTREK</option>
               <option value="L-SERIES">L-SERIES</option>
-              <option value="EJ22">EJ22</option>
               <option value="FORESTER">FORESTER</option>
+              <option value="EJ22">EJ22</option>
           </select>
         </div>
       </div>
@@ -189,6 +189,19 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/classic-ford-weber-dgv-rebuild-instructions-min.png');" class="item h2 w4" data-category="L-series" data-description="Overhauling a 32/36 DGAV is the perfect way to get all the benefits of a brand-new unit at a fraction of the cost. " data-title="Rebuild Your Weber DGAV Carb">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/rebuild-your-weber-dgav-carb.html"> <div class="item-content">
+                <div class="card-title">Rebuild Your Weber DGAV Carb</div>
+                <div class="card-description">Overhauling a 32/36 DGAV is the perfect way to get all the benefits of a brand-new unit at a fraction of the cost. </div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/mtnroo.png');" class="item h2 w4" data-category="generic info" data-description="4x4 subaru groups" data-title="Communities">
 
               <div class="card">
@@ -280,12 +293,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
 
               <div class="card">
-                <!--<div class="card-id">ej22</div> -->
-                <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
-                <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <!--<div class="card-id">Forester</div> -->
+                <a href="./detail-page/2nd-gen-forester-snorkle.html"> <div class="item-content">
+                <div class="card-title">2nd Gen Forester Snorkle</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -293,12 +306,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
 
               <div class="card">
-                <!--<div class="card-id">Forester</div> -->
-                <a href="./detail-page/2nd-gen-forester-snorkle.html"> <div class="item-content">
-                <div class="card-title">2nd Gen Forester Snorkle</div>
+                <!--<div class="card-id">ej22</div> -->
+                <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
+                <div class="card-title">End Wrench: EJ22 Overhaul</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -515,7 +528,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.16.18-33.35</p>
+      <p >v1-09.16.18-44.39</p>
     </a>
   </footer>
 
